--- a/style.css
+++ b/style.css
@@ -1,12 +1,102 @@
-img {
-    width: 20%;
-    margin: 0 auto;
-    display: block;
-  }
+@import url('https://fonts.googleapis.com/css?family=Lora');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-  p {
-    font-size: 20px;
-    font-family: Arial, sans-serif;
-    text-align: justify;
-    color: #051e01;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.centre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300vh;
+  margin: 0;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+  background-image: url('images/forest.jpeg');
+  background-size: cover;
+  /* Ensures the image covers the whole page */
+  background-position: center;
+  /* Centers the image */
+  background-repeat: no-repeat;
+  /* Prevents the image from repeating */
+  margin: 0;
+  /* Removes default margin */
+}
+
+
+
+.container {
+  max-width: 800px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+header h1 {
+  font-size: 2.5em;
+  font-family: 'Lora';
+  color: #063118;
+}
+
+header h2 {
+  font-size: 2em;
+  color: #333;
+}
+
+.invitation {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  margin-bottom: 30px;
+  font-size: 1.2em;
+}
+
+.rsvp-form form {
+  display: flex;
+  font-family: 'Open Sans', sans-serif;
+  flex-direction: column;
+}
+
+.rsvp-form label {
+  margin-bottom: 8px;
+  font-size: 1.1em;
+}
+
+.rsvp-form input,
+.rsvp-form select,
+.rsvp-form textarea {
+  margin-bottom: 15px;
+  padding: 10px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.rsvp-form button {
+  padding: 12px;
+  background-color: #063118;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1.2em;
+  transition: background-color 0.3s ease;
+  font-family: 'Lora';
+}
+
+.rsvp-form button:hover {
+  background-color: #067d38;
+}
